--- a/layout.html
+++ b/layout.html
@@ -11,10 +11,10 @@
 			<h1>Essay</h1>
 			<h2>Zen Garden</h2>
 			<p> 
-				The English architect Christopher Wren once quipped that his chosen field “aims for Eternity,” and there’s something appealing about that formula: Unlike the web, which often feels like aiming for next week, architecture is a discipline very much defined by its permanence.
-		
+				One of the pages I disliked on CSS Zen Garden is number 005 because the design is very crowded and the layout does not allow the user to have a good sense of what is going on.  Additionally, the content is too busy; the user can barely read what it says on the page because the wording is extremely tight.  It needs to have more indenting to add space between words and lines, which will make for an easier reader experience. Also, the text around the image gets lost because of the similar colors.  Some of the CSS properties they use in this page are the font style, which varies too much for such a crowded space, and they apply different font sizes for the various fonts, which makes the layout difficult for the reader to take in. 
+With that said, there was a design I liked on the Zen Garden page – page 221 – because it shows creativity and clarity, which every designer should apply to their work.  I like the layout they have because it flows around the page and makes the reader feel engaged with the material; from top to bottom the user’s eyes go around the page with ease.  Readers will not get lost with the content, as it is very clear and readable. The use of the color works best with the layout and no text is lost.  Some of the CSS properties they are use on this page is the family font and size – they have the same size for all the fonts and words are indented, which makes the layout easier on the eye.
 
-				The English architect Christopher Wren once quipped that his chosen field “aims for Eternity,” and there’s something appealing about that formula: Unlike the web, which often feels like aiming for next week, architecture is a discipline very much defined by its permanence.
-			</p>
+					
+				</p>
 </div>
 		</body>
